--- a/webstyle.css
+++ b/webstyle.css
@@ -44,7 +44,7 @@ a:hover{
 }
 .banner-area{
 	position: relative;
-	background-image: url("cover2.jpg");
+	background-image: url("cover2.ppg");
 	width: 100%;
 	height: 100vh;
 	Background-repeat: no-repeat;
